--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/native-stack": "^7.3.26",
     "@react-navigation/stack": "^7.4.8",
     "@supabase/supabase-js": "^2.57.4",
-    "expo": "54.0.6",
+    "expo": "^54.0.7",
     "expo-av": "^16.0.7",
     "expo-notifications": "^0.32.11",
     "expo-secure-store": "^15.0.7",
