--- a/package.json
+++ b/package.json
@@ -9,6 +9,17 @@
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
+    "expo": {
+      "name": "her-quiet-place",
+      "slug": "her-quiet-place",
+      "scheme": "herquietplace",
+      "platforms": [
+        "ios",
+        "android",
+        "web"
+      ],
+      "version": "1.0.0"
+    },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
