--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
-    "expo": {
-      "name": "her-quiet-place",
-      "slug": "her-quiet-place",
-      "scheme": "herquietplace",
-      "platforms": [
-        "ios",
-        "android",
-        "web"
-      ],
-      "version": "1.0.0"
-    },
+  "expo": {
+    "name": "her-quiet-place",
+    "slug": "her-quiet-place",
+    "scheme": "herquietplace",
+    "platforms": [
+      "ios",
+      "android",
+      "web"
+    ],
+    "version": "1.0.0"
+  },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
@@ -39,7 +39,8 @@
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-vector-icons": "^10.3.0",
+    "expo-linear-gradient": "~15.0.7"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
