--- a/package.json
+++ b/package.json
@@ -29,18 +29,21 @@
     "@react-navigation/stack": "^7.4.8",
     "@supabase/supabase-js": "^2.57.4",
     "expo": "^54.0.7",
+    "expo-audio": "^1.0.11",
     "expo-av": "^16.0.7",
+    "expo-document-picker": "~14.0.7",
+    "expo-linear-gradient": "~15.0.7",
     "expo-notifications": "^0.32.11",
     "expo-secure-store": "^15.0.7",
     "expo-status-bar": "~3.0.8",
+    "expo-video": "^3.0.11",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-vector-icons": "^10.3.0",
-    "expo-linear-gradient": "~15.0.7"
+    "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
